updated contact github link

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     </li>
                     <li>
                         <strong>Github</strong>
+                        <a href="https://www.github.com/Mason021">Github</a>
                     </li>
                     <li>
                         <strong>Phone</strong>
