added picture of myself in place of placeholder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <!-- Image & Bio Section-->
             <section>
-                <img src="http://placehold.it/200X200" alt="placeholder image" />
+                <img src="./assets/images/mason-pic.png" alt="Mason Picture" />
                 <p>Hello! My name is Mason and this is my portfolio <a href="https://www.google.com/">and this is a link to google</a>" </p>
             </section>
 
