updated the header to have 4 tags shown in mock up

--- a/index.html
+++ b/index.html
@@ -11,8 +11,25 @@
     <body>
         <!-- head for portfolio-->
         <header>
-            <h1> Mason Cain</h1>
-            <h2> Portfolio</h2>
+            <h1>
+                <a href="/">Mason Cain</a>
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about-me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#work">Work</a>
+                    </li>
+                    <li>
+                        <a href="#contact-me">Contact Me</a>
+                    </li>
+                    <li>
+                        <a href="Resume">Resume</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
 
         <!--Image, bio, contact etc.-->
@@ -20,7 +37,7 @@
 
             <!-- Image & Bio Section-->
             <section>
-                <img src="./assets/images/mason-pic.png" alt="Mason Picture" />
+                <img src="./assets/images/mason-pic.png" alt="Mason smiling for the camera" />
                 <p>Hello! My name is Mason and this is my portfolio <a href="https://www.google.com/">and this is a link to google</a>" </p>
             </section>
 
