updated email link and added picture that will be below header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./assets/css/style.css">
-        <title>My Portfolio</title>
+        <title>Portfolio of Mason Cain</title>
     </head>
 
     <body>
@@ -31,23 +31,23 @@
                 </ul>
             </nav>
         </header>
-
+        <div class="hero"></div>
         <!--Image, bio, contact etc.-->
         <main>
 
             <!-- Image & Bio Section-->
             <section>
                 <img src="./assets/images/mason-pic.png" alt="Mason smiling for the camera" />
-                <p>Hello! My name is Mason and this is my portfolio <a href="https://www.google.com/">and this is a link to google</a>" </p>
+                <p>Hello! My name is Mason and this is my portfolio <a href="https://mason021.github.io/Professional-Portfolio/">click to learn more</a>" </p>
             </section>
 
             <!-- Contact Info-->
-            <section>
-                <h2>Contact Info</h2>
+        <footer>
+            <h2>Contact Info</h2>
                 <ul>
                     <li>
                         <strong>Email</strong>
-                        <a href="mailto:help@google.com">help@google.com</a>
+                        <a href="mailto:mdc5054@gmail.com">mdc5054@gmail.com</a>
                     </li>
                     <li>
                         <strong>Github</strong>
@@ -62,7 +62,7 @@
                         <a href="https://www.linkedin.com/in/mason-c-42056855/">LinkedIn</a>
                     </li>
                 </ul>
-            </section>
+        </footer>
         </main>
     </body>
 <html
