added nav function to header

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="#contact-me">Contact Me</a>
                     </li>
                     <li>
-                        <a href="#Resume">Resume</a>
+                        <a href="#resume">Resume</a>
                     </li>
                 </ul>
             </nav>
@@ -43,12 +43,12 @@
             </section>
         <!--Image, bio, contact etc.-->
         <main>
-            <section>
+            <section id="about-me">
                 <h2>About Me
                     <p id="about-text">this will be bio info</h2>
                 </h2>
             </section>
-            <section>
+            <section id="work">
                 <h2>Work</h2>
                     <div>
                         <div class="projects water">
@@ -86,7 +86,7 @@
             
         </main>
             <!-- Contact Info-->
-        <footer>
+        <footer id="contact-me">
             <h2>Contact Info</h2>
                 <ul>
                     <li>
@@ -101,7 +101,8 @@
                         <strong>Phone</strong>
                         <a href="tel:+17248893355">(724-889-3355)</a>
                     </li>
-                    <li>
+                    <!-- resume is going to linked in for now -->
+                    <li id="resume"> 
                         <strong>LinkedIn</strong>
                         <a href="https://www.linkedin.com/in/mason-c-42056855/">LinkedIn</a>
                     </li>
