--- a/index.html
+++ b/index.html
@@ -32,24 +32,26 @@
             </nav>
         </header>
         <!-- Image & Banner Image Section-->
-            <section class="banner">
-                <div>
+        <section class="banner">
+            <div>
                 <!-- <img src="./assets/images/mason-pic.png" alt="Mason smiling for the camera" /> -->
-                    <div>
-                        <h2>Hello! My name is Mason and this is my portfolio <a href="https://mason021.github.io/Professional-Portfolio/">click to learn more</a>" </h2>
-                    </div>
+                <div>
+                    <h2>Hello! My name is Mason and this is my portfolio <a href="https://mason021.github.io/Professional-Portfolio/">click to learn more</a>" </h2>
                 </div>
-            </section>
+            </div>
+        </section>
         <!--Image, bio, contact etc.-->
         <main id="about-me">
-            
-                <h2>About Me
-                    <p id="about-text">this will be bio info</h2>
-                </h2>
-            
-                <h2>Work</h2>
+                <div>
+                    <h2>About Me
+                        <p id="about-text">this will be bio info</h2>
+                    </h2>
+                </div>
+                <div>
+                    <h2>Work</h2>
+                </div>
                     <div>
-                        <div class="projects water">
+                        <div class="projects horiseon">
                             <p> test</p>
                             <!-- <img src="./assets/images/mirror-water.jpg" alt="water with mirror finish" /> -->
                         </div>
@@ -91,21 +93,17 @@
             <nav>
                 <ul>
                     <li>
-                        <strong>Email</strong>
-                        <a href="mailto:mdc5054@gmail.com">mdc5054@gmail.com</a>
+                        <a href="mailto:mdc5054@gmail.com"><strong>mdc5054@gmail.com</strong></a>
                     </li>
                     <li>
-                        <strong>Github</strong>
-                        <a href="https://www.github.com/Mason021">Github</a>
+                        <a href="https://www.github.com/Mason021"><strong>Github</strong></a>
                     </li>
                     <li>
-                        <strong>Phone</strong>
-                        <a href="tel:+17248893355">(724-889-3355)</a>
+                        <a href="tel:+17248893355"><strong>(724-889-3355)</strong></a>
                     </li>
                     <!-- resume is going to linked in for now -->
                     <li id="resume"> 
-                        <strong>LinkedIn</strong>
-                        <a href="https://www.linkedin.com/in/mason-c-42056855/">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/mason-c-42056855/"><strong>LinkedIn</strong></a>
                     </li>
                 </ul>
             </nav>
