added hover function and several touch up on missing elements

--- a/index.html
+++ b/index.html
@@ -35,51 +35,62 @@
         <section class="banner">
             <div>
                 <!-- <img src="./assets/images/mason-pic.png" alt="Mason smiling for the camera" /> -->
-                <div>
-                    <h2>Hello! My name is Mason and this is my portfolio <a href="https://mason021.github.io/Professional-Portfolio/">click to learn more</a>" </h2>
+                <div class="banner-span">
+                        <span>
+                            <h2>Imagine What You Will Know Tomorrow </h2>
+                        </span>
                 </div>
             </div>
         </section>
         <!--Image, bio, contact etc.-->
-        <main id="about-me">
-                <div>
-                    <h2>About Me
-                        <p id="about-text">this will be bio info</h2>
-                    </h2>
+        <main >
+            <span>
+            <h2 id="about-me">About Me</h2>   
+            <p>this is info about me</p>
+            </span>
+
+            <h2 id="work">Work</h2>
+            <div class="flex-container">
+                <div class="flex-item horiseon">
+                    <span>
+                    <a href="https://mason021.github.io/Horiseon-project" target="_blank">
+                        <h4>Horiseon</h4>
+                        <p>HTML/CSS </p>
+                    </a>
+                    </span>
                 </div>
-                <div>
-                    <h2>Work</h2>
+                <div class="flex-item robot-gladiators">
+                    <span>
+                    <a href="https:placeholder" target="_blank">
+                        <h4>Robot Gladiators</h4>
+                        <p>HTML/JavaScript</p>
+                    </a>
+                    </span>
                 </div>
-                    <div>
-                        <div class="projects horiseon">
-                            <p> test</p>
-                            <!-- <img src="./assets/images/mirror-water.jpg" alt="water with mirror finish" /> -->
-                        </div>
-                        <div class="projects bookstore">
-                            <p> test</p>
-                        </div>
-                        <div class="projects galaxy">
-                            <p> test</p>
-                        </div>
-                        <div class="projects sunset">
-                            <p> test</p>
-                        </div>
-                        <div class="projects run-buddy">
-                            <p> test</p>
-                        </div>
-                        <!-- <div>
-                            <img src="assets/images/book-store.jpg" alt="wall of books with door in the middle" />
-                        </div>
-                        <div>
-                            <img src="assets/images/boat-galaxy.webp" alt="boat with galaxy in backgorund" />
-                        </div>
-                        <div>
-                            <img src="assets/images/sunset-tree.webp" alt="tree with sunset behind it"/>
-                        </div>
-                        <div>
-                        <img src="assets/images/hero-bg.jpg" alt="runner tying shoes" />
-                        </div> -->
-                    </div>
+                <div class="flex-item galaxy">
+                    <span>
+                    <a href="https:placeholder" target="_blank">
+                        <h4>LED Wall</h4>
+                        <p>Node/loT</p>
+                    </a>
+                    </span>
+                </div>
+                <div class="flex-item sunset">
+                    <span>
+                    <a href="https:placeholder" target="_blank">
+                        <h4>Calculator</h4>
+                        <p>React/JavaScript/CSS</p>
+                    </a>
+                    </span>
+                </div>
+                <div class="flex-item run-buddy">
+                    <span>
+                    <a href="https://mason021.github.io/run-buddy/" target="_blank">
+                        <h4>Run Buddy</h4>
+                        <p>HTML/CSS</p>
+                    </a>
+                    </span>
+                </div>
                     
             
             <!-- Image & Bio Section-->
