updated projects shown in portfolio

--- a/index.html
+++ b/index.html
@@ -51,35 +51,35 @@
 
             <h2 id="work">Work</h2>
             <div class="flex-container">
-                <div class="flex-item horiseon">
+                <div class="flex-item movieNight">
                     <span>
-                    <a href="https://mason021.github.io/Horiseon-project" target="_blank">
-                        <h4>Horiseon</h4>
-                        <p>HTML/CSS </p>
+                    <a href="https://lincolnw90.github.io/Movie-Matcher/" target="_blank">
+                        <h4>Movie Matcher</h4>
+                        <p>HTML/JavaScript/CSS</p>
                     </a>
                     </span>
                 </div>
                 <div class="flex-item robot-gladiators">
                     <span>
-                    <a href="https:placeholder" target="_blank">
+                    <a href="https://mason021.github.io/robot-gladiators/" target="_blank">
                         <h4>Robot Gladiators</h4>
                         <p>HTML/JavaScript</p>
                     </a>
                     </span>
                 </div>
-                <div class="flex-item galaxy">
+                <div class="flex-item horiseon">
                     <span>
-                    <a href="https:placeholder" target="_blank">
-                        <h4>LED Wall</h4>
-                        <p>Node/loT</p>
+                    <a href="https://mason021.github.io/Horiseon-project" target="_blank">
+                        <h4>Horiseon</h4>
+                        <p>HTML/CSS</p>
                     </a>
                     </span>
                 </div>
-                <div class="flex-item sunset">
+                <div class="flex-item passwordGen">
                     <span>
-                    <a href="https:placeholder" target="_blank">
-                        <h4>Calculator</h4>
-                        <p>React/JavaScript/CSS</p>
+                    <a href="https://mason021.github.io/password-generator/" target="_blank">
+                        <h4>Password Generator</h4>
+                        <p>HTML/JavaScript/CSS</p>
                     </a>
                     </span>
                 </div>
