added pic for background

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </a>
                     </span>
                 </div>
-                <div class="flex-item robot-gladiators">
+                <div class="flex-item bingeBucket">
                     <span>
                     <a href="https://mason021.github.io/robot-gladiators/" target="_blank">
                         <h4>Robot Gladiators</h4>
