updated links to projects

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 </div>
                 <div class="flex-item bingeBucket">
                     <span>
-                    <a href="https://mason021.github.io/robot-gladiators/" target="_blank">
-                        <h4>Robot Gladiators</h4>
-                        <p>HTML/JavaScript</p>
+                    <a href="https://mysterious-lowlands-87341.herokuapp.com/" target="_blank">
+                        <h4>BingeBucket</h4>
+                        <p>JavaScript/Node/MySql</p>
                     </a>
                     </span>
                 </div>
