--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     </a>
                     </span>
                 </div>
-                <div class="flex-item horiseon">
+                <div class="flex-item stockwatch">
                     <span>
-                    <a href="https://mason021.github.io/Horiseon-project" target="_blank">
+                    <a href="https://www.stockwatch.life/" target="_blank">
                         <h4>Horiseon</h4>
                         <p>HTML/CSS</p>
                     </a>
