--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="flex-item bingeBucket">
                     <span>
                     <a href="https://arcane-plateau-68578.herokuapp.com/" target="_blank">
-                        <h4>BingeBucket</h4>
+                        <h4>Binge Bucket</h4>
                         <p>JavaScript/Node/MySql</p>
                     </a>
                     </span>
@@ -70,8 +70,8 @@
                 <div class="flex-item stockwatch">
                     <span>
                     <a href="https://www.stockwatch.life/" target="_blank">
-                        <h4>Horiseon</h4>
-                        <p>HTML/CSS</p>
+                        <h4>Stock Watch</h4>
+                        <p>MERN</p>
                     </a>
                     </span>
                 </div>
